<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resetPWD_dialog_title"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:padding="12dp"
        android:gravity="center"
        android:background="@drawable/custom_textview"/>
    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/newPWD"
        android:inputType="textPassword"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/confirmPWD"
        android:inputType="textPassword"
        android:padding="12dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="#7229D5"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="#7229D5"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>