<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/britain_flag"
        app:maxImageSize="50dp"
        app:fabCustomSize="30dp"
        app:tint="@null"
        app:layout_constraintBottom_toTopOf="@id/tvWelcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/tvDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@id/tvTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="@id/tvDeveloper"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/tvDeveloper"
        app:layout_constraintTop_toBottomOf="@id/tvDeveloper"
        app:srcCompat="@drawable/opening_logo" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/imgLogo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/imgLogo"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/name_icon"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/tvWelcome"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/tvWelcome"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="@id/edtUsername"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/edtUsername"
        app:layout_constraintTop_toBottomOf="@+id/edtUsername" />

    <CheckBox
        android:id="@+id/chkShowPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showPWD"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/edtPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/edtPassword"
        app:layout_constraintTop_toBottomOf="@id/edtPassword"/>

    <TextView
        android:id="@+id/tvForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgetPWD"
        android:textSize="18sp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@id/edtPassword"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/edtPassword"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_button"
        android:text="@string/signIn"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@id/edtPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/edtPassword"
        app:layout_constraintTop_toBottomOf="@id/tvForgetPassword" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@id/btnSignIn"
        app:layout_constraintEnd_toEndOf="@id/btnSignIn"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn"
        app:layout_constraintHorizontal_bias="0.5">

        <TextView
            android:id="@+id/tvHaveAnyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haveAnyAccount"
            android:textSize="18sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvSignUpOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signUp_Option"
            android:textSize="18sp"
            android:paddingLeft="5dp"
            android:textColor="@color/blue"
            android:clickable="true"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>