<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/britain_flag"
        app:maxImageSize="50dp"
        app:fabCustomSize="30dp"
        app:tint="@null"
        app:layout_constraintBottom_toTopOf="@id/tvRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Atmosphere"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="InvalidId" />

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/opening_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgView" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/name_icon"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@id/tvRegister"
        app:layout_constraintStart_toStartOf="@id/tvRegister"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@id/edtUsername"
        app:layout_constraintStart_toStartOf="@id/edtUsername"
        app:layout_constraintTop_toBottomOf="@id/edtUsername" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@id/edtEmail"
        app:layout_constraintStart_toStartOf="@id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:hint="@string/confirmPWD"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@id/edtPassword"
        app:layout_constraintStart_toStartOf="@id/edtPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <CheckBox
        android:id="@+id/chkShowPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showPWD"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/edtConfirmPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/edtConfirmPassword"
        app:layout_constraintTop_toBottomOf="@id/edtConfirmPassword"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/createAccount"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@id/edtConfirmPassword"
        app:layout_constraintStart_toStartOf="@id/edtConfirmPassword"
        app:layout_constraintTop_toBottomOf="@id/chkShowPassword" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/btnSignUp"
        app:layout_constraintEnd_toEndOf="@id/btnSignUp"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp">

        <TextView
            android:id="@+id/tvAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alreadyHaveAccount"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvSignInOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signIn_Option"
            android:textSize="18sp"
            android:paddingLeft="5dp"
            android:textColor="@color/blue"
            android:clickable="true"/>

    </LinearLayout>

    <Button android:id="@+id/btnBack"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>