<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/britain_flag"
        app:maxImageSize="50dp"
        app:fabCustomSize="30dp"
        app:tint="@null"
        app:layout_constraintBottom_toTopOf="@+id/tvIntro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tvDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/developer"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="@id/tvDeveloper"
        app:layout_constraintStart_toStartOf="@id/tvDeveloper"
        app:layout_constraintTop_toBottomOf="@+id/tvDeveloper"
        app:srcCompat="@drawable/opening_logo" />

    <TextView
        android:id="@+id/tvIntro"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/intro"
        android:textSize="18sp"
        android:textStyle="italic"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@id/imgLogo"
        app:layout_constraintStart_toStartOf="@id/imgLogo"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:text="@string/signIn"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@id/tvIntro"
        app:layout_constraintStart_toStartOf="@id/tvIntro"
        app:layout_constraintTop_toBottomOf="@+id/tvIntro" />

    <View
        android:id="@+id/view1"
        android:layout_width="130dp"
        android:layout_height="2dp"
        android:background="@color/gray"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:text="@string/or"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view1"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

    <View
        android:id="@+id/view2"
        android:layout_width="130dp"
        android:layout_height="2dp"
        android:background="@color/gray"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:background="@drawable/custom_button"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@id/view2"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@+id/tvOr" />

</androidx.constraintlayout.widget.ConstraintLayout>